[package]
name = "greenlight-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
gl-client = { git = "https://github.com/Blockstream/greenlight.git" }
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.29.2"
anyhow = "1.0"
dotenv = "0.15.0"
rand = "0.9.0"
base64 = "0.21.0"
